# csa-lab-3

./: .gitignore  README.md  controlunit.py  datapath.py  golden_asm_test.py  isa.py  machine.py  pyproject.toml  translator.py
.github/workflows/: ci.yml
examples/: cat.asm  hello.asm  hello_user_name.asm  prob1.asm
golden/: cat.yml  hello.yml  hello_user_name.yml  prob1.yml
